# clappingseal-bot-template

./: .env.dist  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
buildfiles/: Dockerfile
src/: configuration.py  ioc.py
src/app/: __main__.py
src/bot/: app.py  dispatcher.py
src/bot/logic/: __init__.py
src/bot/logic/handlers/: commands.py
src/bot/middlewares/: __init__.py
src/bot/structures/: data_structure.py
src/bot/structures/FSM/: base.py
src/bot/structures/schemas/: mail.py
src/db/: database.py
src/db/models/: __init__.py  user.py
src/db/repositories/: abstract.py  user.py
src/faststream/: app.py  broker.py
src/faststream/handlers/: mailing.py
src/taskiq_scheduler/: broker.py  scheduled_tasks.py
